cppcheck_report.txt
lab_01/src/edges_arr.cpp:31:41: style: Parameter 'edges' can be declared with const [constParameter]
unsigned int get_edges_num(edges_arr_t& edges) { return edges.edges_num; }
                                        ^
lab_01/src/edges_arr.cpp:33:31: style: Parameter 'edges' can be declared with const [constParameter]
edge_t& get_edge(edges_arr_t& edges, int ind) { return edges.edges[ind]; }
                              ^
lab_01/src/model.cpp:33:35: style: Parameter 'model' can be declared with const [constParameter]
dots_arr_t& get_dots_arr(model_t& model) { return model.dots; }
                                  ^
lab_01/src/model.cpp:35:37: style: Parameter 'model' can be declared with const [constParameter]
edges_arr_t& get_edges_arr(model_t& model) { return model.edges; }
                                    ^
lab_01/src/model.cpp:39:28: style: Parameter 'model' can be declared with const [constParameter]
dot_t& get_center(model_t& model) { return model.center; }
                           ^
lab_03/src/configuration/libconfig_configuration.cpp:43:5: style:inconclusive: Found duplicate branches for 'if' and 'else'. [duplicateBranch]
    if ("qt" == frame) {
    ^
lab_03/src/configuration/libconfig_configuration.cpp:45:7: note: Found duplicate branches for 'if' and 'else'.
    } else {
      ^
lab_03/src/configuration/libconfig_configuration.cpp:43:5: note: Found duplicate branches for 'if' and 'else'.
    if ("qt" == frame) {
    ^
lab_03/src/configuration/libconfig_configuration.cpp:66:5: style:inconclusive: Found duplicate branches for 'if' and 'else'. [duplicateBranch]
    if ("file" == frame) {
    ^
lab_03/src/configuration/libconfig_configuration.cpp:68:7: note: Found duplicate branches for 'if' and 'else'.
    } else {
      ^
lab_03/src/configuration/libconfig_configuration.cpp:66:5: note: Found duplicate branches for 'if' and 'else'.
    if ("file" == frame) {
    ^
lab_01/src/graphics/mainwindow.h:18:1: error: The one definition rule is violated, different classes/structs have the same name 'MainWindow' [ctuOneDefinitionRuleViolation]
class MainWindow : public QMainWindow {
^
lab_03/design.h:23:1: note: The one definition rule is violated, different classes/structs have the same name 'MainWindow'
class MainWindow : public QMainWindow {
^
lab_01/src/graphics/mainwindow.h:18:1: note: The one definition rule is violated, different classes/structs have the same name 'MainWindow'
class MainWindow : public QMainWindow {
^
lab_01/src/dots_arr_transform.cpp:32:0: style: The function 'move_dots' is never used. [unusedFunction]

^
lab_01/src/graphics/mainwindow.cpp:112:0: style: The function 'on_loadModelButton_clicked' is never used. [unusedFunction]

^
lab_01/src/graphics/mainwindow.cpp:72:0: style: The function 'on_moveButton_clicked' is never used. [unusedFunction]

^
lab_01/src/graphics/mainwindow.cpp:51:0: style: The function 'on_rotateButton_clicked' is never used. [unusedFunction]

^
lab_01/src/graphics/mainwindow.cpp:131:0: style: The function 'on_saveModelButton_clicked' is never used. [unusedFunction]

^
lab_01/src/graphics/mainwindow.cpp:92:0: style: The function 'on_scaleButton_clicked' is never used. [unusedFunction]

^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingInclude]

